--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -5,8 +5,8 @@
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
-  min-width: 350px;
-  max-width: 350px;
+  min-width: 240px;
+  max-width: 240px;
 
   border-right: 1px solid var(--color-typo-system);
 }
@@ -31,8 +31,8 @@
   opacity: 0;
   display: flex;
   align-items: center;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   height: 100%;
 }
 
