--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -9,6 +9,8 @@
   max-width: 240px;
 
   border-right: 1px solid var(--color-typo-system);
+
+  background-color: var(--color-bg-secondary);
 }
 
 .tabs :global(.TabsTab:before) {
