--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
@@ -1,6 +1,6 @@
 .headerContainer {
   height: var(--graphics-size-l);
-  background-color: var(--color-bg-stripe);
+  background-color: var(--color-bg-secondary);
   justify-content: space-between;
   align-items: center;
   padding-left: var(--graphics-size-s);
