--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/FormBlock/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/FormBlock/styles.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
+  background-color: var(--color-bg-secondary);
 }
 .formBlock {
   flex-grow: 1.5;
