--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
@@ -1,18 +1,9 @@
 .componentCard {
+  display: flex;
+  flex-direction: column;
   border-radius: 0.5rem;
   border: 0.125rem solid #00416633;
-}
-
-.imgBox {
-  display: flex;
-  width: 6rem;
-  height: 4.375rem;
-}
-
-.img {
-  flex: 1;
-  align-items: center;
-  align-self: center;
+  min-height: 24px;
 }
 
 .text {
