--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
@@ -1,16 +1,15 @@
 .baseComponentsPanel {
-  flex-grow: 0.5;
-  flex-shrink: 1;
-  flex-basis: 0;
+  flex: 1 0 40%;
   display: flex;
   flex-direction: column;
-  height: 48%;
-}
+  overflow-x: hidden;
+  border-top: 1px solid var(--color-control-bg-border-default);
 
+}
 .buttonsSaveLoad {
   display: flex;
   justify-content: space-between;
-  padding: var(--space-xs) var(--space-s) var(--space-xs) var(--space-s);
+  padding: var(--space-xs) var(--space-l) var(--space-xs) var(--space-s);
   align-items: center;
   border-bottom: 1px solid #00416633;
 }
@@ -20,5 +19,4 @@
   flex-direction: column;
   flex: content;
   overflow-y: auto;
-  height: 85%;
 }
