--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentTree/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentTree/styles.module.css
@@ -1,8 +1,6 @@
 .commentTree {
-  flex-grow: 0.5;
-  flex-shrink: 1;
-  flex-basis: 0;
+  flex-grow: 1;
   overflow-y: auto;
+  overflow-x: auto;
   margin: 0.2rem;
-  border-top: 1px solid var(--color-typo-system);
 }
