--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   padding: var(--space-xs) var(--space-l) var(--space-xs) var(--space-s);
   align-items: center;
-  border-bottom: 1px solid #00416633;
+  border-bottom: 1px solid var(--color-control-bg-border-default);
 }
 
 .baseComponents {
