--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -7,27 +7,16 @@
   overflow-y: hidden;
   min-width: 240px;
   max-width: 240px;
+  padding: var(--space-xs);
 
   border-right: 1px solid var(--color-typo-system);
 
   background-color: var(--color-bg-secondary);
 }
 
-.tabs :global(.TabsTab:before) {
-  content: none !important;
-}
-
-.tabs {
-  display: flex;
-  border-bottom: 1px solid var(--color-typo-system);
-}
-
-.tabs_margin {
-  margin-left: 1rem;
-}
-
 .toggleButton {
   position: absolute;
+  z-index: 2;
   left: 10px;
   background-color: rgba(0, 0, 0, 0.1);
   opacity: 0;
@@ -40,4 +29,10 @@
 
 .toggleButton:hover {
   opacity: 1;
+}
+.toggleContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
