--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
@@ -7,8 +7,15 @@
   padding-right: var(--graphics-size-s);
   padding-top: var(--space-2xs);
   padding-bottom: var(--space-2xs);
+  border-bottom: 1px solid var(--color-bg-border);
 }
 .projectName {
   justify-content: space-between;
   align-items: center;
+}
+.divider {
+  border-right: 1px solid var(--color-bg-border);
+  height: 12px;
+  margin-left: var(--space-xs);
+  margin-right: var(--space-xs);
 }
