--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
-  border: 0.125rem solid #00416633;
+  border: 1px solid var(--color-bg-border);
   min-height: 24px;
 }
 
