--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/ComponentCard/styles.module.css
@@ -1,7 +1,9 @@
 .componentCard {
   flex: 1;
   border-radius: 0.5rem;
-  border: 2px solid var(--color-bg-border);
+  border: 1px solid var(--color-bg-border);
+  min-height: 24px;
+  max-height: 24px;
 }
 
 .paddingText {
