--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/DeveloperPanel/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/DeveloperPanel/styles.module.css
@@ -1,6 +1,8 @@
 .code {
     background-color: #967969;
     border-radius: 10px;
+    word-break: normal;
+    white-space: pre-wrap;
 }
 
 .code_pane {
