Изменить заливку для кода в темной теме

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/DeveloperPanel/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/DeveloperPanel/styles.module.css
@@ -5,6 +5,10 @@
     white-space: pre-wrap;
 }
 
+.code_dark {
+    background-color: #606b5a;
+}
+
 .code_pane {
     overflow-y: auto;
     gap: 1.2rem
