Добавлены правки стилей и новый плейсхолдер

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
@@ -16,6 +16,6 @@
 .divider {
   border-right: 1px solid var(--color-bg-border);
   height: 12px;
-  margin-left: var(--space-xs);
-  margin-right: var(--space-xs);
+  margin-left: var(--space-2xs);
+  margin-right: var(--space-2xs);
 }
