--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/styles.module.css
@@ -1,5 +1,5 @@
 .baseComponentsPanel {
-  flex: 1 0 40%;
+  flex: 1 0 50%;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
@@ -9,9 +9,8 @@
 .buttonsSaveLoad {
   display: flex;
   justify-content: space-between;
-  padding: var(--space-xs) var(--space-l) var(--space-xs) var(--space-s);
+  padding: var(--space-xs) 0 var(--space-xs) 0;
   align-items: center;
-  border-bottom: 1px solid var(--color-control-bg-border-default);
 }
 
 .baseComponents {
