--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/ComponentItems/styles.module.css
@@ -1,7 +1,7 @@
 .componentItems {
-  flex: 1 0 50%;
+  flex: 1 0 45%;
   overflow-x: hidden;
-  padding: 0 var(--space-xs) 0 0;
+  padding: 0 var(--space-xs) var(--space-xs)  0;
   display: flex;
   flex-direction: column;
   gap: var(--space-2xs);
