--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/styles.module.css
@@ -1,14 +1,11 @@
 .componentStructure {
-  flex-grow: 0.5;
-  flex-shrink: 1;
-  flex-basis: 0;
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
+  overflow-x: hidden;
   min-width: 240px;
   max-width: 240px;
   padding: var(--space-xs);
-
   border-right: 1px solid var(--color-typo-system);
 
   background-color: var(--color-bg-secondary);
