--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/Header/Header.module.css
@@ -3,16 +3,10 @@
   background-color: var(--color-bg-secondary);
   justify-content: space-between;
   align-items: center;
-  padding-left: var(--space-xs);
-  padding-right: var(--space-xs);
-  padding-top: var(--space-2xs);
-  padding-bottom: var(--space-2xs);
+  padding: var(--space-2xs) var(--space-xs);
   border-bottom: 1px solid var(--color-bg-border);
 }
-.projectName {
-  justify-content: space-between;
-  align-items: center;
-}
+
 .divider {
   border-right: 1px solid var(--color-bg-border);
   height: 12px;
