--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentGroupCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentGroupCard/styles.module.css
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-xs);
-  padding-left: var(--space-xs);
-  padding-right: var(--space-xs);
-  padding-top: var(--space-xs);
+  padding-top: var(--space-2xs);
 }
 
 .componentGroupCardCollapse {
