Компонент Label вынесен для всех карточек

--- a/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
+++ b/src/components/FormConstructor/FormConstructorFormBlockConfigure/Panels/ComponentsStructure/BaseComponents/BaseComponentCardsList/BaseComponentsCard/styles.module.css
@@ -8,7 +8,10 @@
   align-items: center;
   justify-content: space-between;
 }
-
+.componentCardContainer:hover {
+  background-color: var(--color-control-bg-ghost);
+  cursor: pointer;
+}
 .text {
   padding-left: var(--space-2xs);
 }
